feat: implement organizations and membership foundation

--- a/docs/features/F0.1 - SHARED KERNEL.md
+++ b/docs/features/F0.1 - SHARED KERNEL.md
@@ -19,10 +19,10 @@ Sem dependência de:
 
 ## 📁 Estrutura de pastas / namespaces
 
-Em `AgroConnect.Domain`:
+Em `Agronomia.Domain`:
 
 ```text
-AgroConnect.Domain
+Agronomia.Domain
  └── Common
      ├── Entity.cs
      ├── AggregateRoot.cs
@@ -36,7 +36,7 @@ AgroConnect.Domain
 Namespaces sugeridos:
 
 ```csharp
-namespace AgroConnect.Domain.Common;
+namespace Agronomia.Domain.Common;
 ```
 
 ---
@@ -407,7 +407,7 @@ Você pode evoluir depois para exceções de domínio específicas (`DomainExcep
 2. **Todas Entities** com `Id` devem herdar de `Entity`.
 3. Todos os Value Objects devem herdar de `ValueObject`.
 4. Todos os eventos de domínio concretos devem herdar de `DomainEvent`.
-5. **Nenhum código de infra** (EF, Wolverine, Dapper) é permitido em `AgroConnect.Domain.Common`.
+5. **Nenhum código de infra** (EF, Wolverine, Dapper) é permitido em `Agronomia.Domain.Common`.
 6. Shared Kernel **não referencia** Application, Api, Infrastructure.
 
 ---
@@ -417,11 +417,11 @@ Você pode evoluir depois para exceções de domínio específicas (`DomainExcep
 Quando for pedir pro Codex gerar o Shared Kernel, use algo assim:
 
 ```text
-You are implementing the F0.1 — Shared Kernel for the AgroConnect backend (.NET 10).
+You are implementing the F0.1 — Shared Kernel for the Agronomia backend (.NET 10).
 
 Follow these constraints:
-- Project: AgroConnect.Domain
-- Namespace: AgroConnect.Domain.Common
+- Project: Agronomia.Domain
+- Namespace: Agronomia.Domain.Common
 - No external dependencies (no EF Core, no Wolverine, no Dapper)
 - Implement: Entity, AggregateRoot, ValueObject, DomainEvent, IHasDomainEvents, Result, Result<T>, Guard
 
