--- a/docs/features/F0.2 - CQRS INFRASTRUCTURE.md
+++ b/docs/features/F0.2 - CQRS INFRASTRUCTURE.md
@@ -61,7 +61,7 @@ Wolverine vive em:
 ## 📁 Estrutura de pastas introduzida / consolidada
 
 ```text
-AgroConnect.Application
+Agronomia.Application
  ├── Abstractions
  │   ├── CQRS
  │   │   ├── ICommand.cs
