--- a/docs/features/F0.3 - PERSISTENCE.md
+++ b/docs/features/F0.3 - PERSISTENCE.md
@@ -62,9 +62,9 @@ Após o F0.3:
 ## 📁 Estrutura de pastas
 
 ```text
-AgroConnect.Infrastructure
+Agronomia.Infrastructure
  ├── Persistence
- │   ├── AgroConnectDbContext.cs
+ │   ├── AgronomiaDbContext.cs
  │   ├── Migrations/
  │   ├── Configurations/          # EF Core mappings
  │   └── Interceptors/            # reservado (auditoria/outbox futuro)
@@ -83,7 +83,7 @@ AgroConnect.Infrastructure
 Interfaces compartilhadas ficam em:
 
 ```text
-AgroConnect.Application.Abstractions
+Agronomia.Application.Abstractions
  └── Persistence
      └── IUnitOfWork.cs
 ```
@@ -92,7 +92,7 @@ AgroConnect.Application.Abstractions
 
 ## 1️⃣ Write Model — EF Core
 
-### 1.1. `AgroConnectDbContext`
+### 1.1. `AgronomiaDbContext`
 
 **Responsabilidade**
 
@@ -254,7 +254,7 @@ Em `InfrastructureModule` (ou similar):
 
 Registrar:
 
-* `AgroConnectDbContext`
+* `AgronomiaDbContext`
 * `IUnitOfWork` → `EfUnitOfWork`
 * `IDbConnectionFactory`
 
@@ -270,7 +270,7 @@ Separar claramente:
 
 F0.3 define:
 
-* `ConnectionStrings:AgroConnect`
+* `ConnectionStrings:Agronomia`
 * `appsettings.json`
 * `appsettings.Development.json`
 
