--- a/docs/features/F1.1 - USER REGISTER.md
+++ b/docs/features/F1.1 - USER REGISTER.md
@@ -2,7 +2,7 @@
 
 ### 📌 Context
 
-This PR introduces **F1.1 — RegisterUser**, the first **business feature** of AgroConnect.
+This PR introduces **F1.1 — RegisterUser**, the first **business feature** of Agronomia.
 It establishes the **Identity & Access foundation** by allowing users to register with email and password, exercising the full stack built in F0.1–F0.3.
 
 This PR validates:
