--- a/docs/features/F1.2 - AUTHENTICATE USER.md
+++ b/docs/features/F1.2 - AUTHENTICATE USER.md
@@ -30,7 +30,7 @@ Após F1.2:
   * `sub` = UserId
   * `email`
   * `iat`, `exp`
-* Configuração básica de **JWT Bearer** no `AgroConnect.Api`
+* Configuração básica de **JWT Bearer** no `Agronomia.Api`
 * Endpoint HTTP de login
 * Tipos de erro adequados (401/400)
 
@@ -58,7 +58,7 @@ Após F1.2:
 ### Application
 
 ```text
-AgroConnect.Application
+Agronomia.Application
  └── Features
      └── Identity
          └── AuthenticateUser
@@ -71,7 +71,7 @@ AgroConnect.Application
 ### Api
 
 ```text
-AgroConnect.Api
+Agronomia.Api
  └── Features
      └── Auth
          └── Authenticate
@@ -83,7 +83,7 @@ AgroConnect.Api
 ### Infrastructure
 
 ```text
-AgroConnect.Infrastructure
+Agronomia.Infrastructure
  └── Auth
      ├── IJwtTokenGenerator.cs
      └── JwtTokenGenerator.cs
@@ -162,7 +162,7 @@ Erros de autenticação devem ser padronizados (ex.: não revelar se o email exi
 
 ### 2.1. Interface `IJwtTokenGenerator`
 
-Idealmente em `AgroConnect.Application.Abstractions.Auth`:
+Idealmente em `Agronomia.Application.Abstractions.Auth`:
 
 ```csharp
 public interface IJwtTokenGenerator
@@ -177,7 +177,7 @@ Você pode expandir depois com claims adicionais, roles, etc.
 
 ### 2.2. Implementação `JwtTokenGenerator`
 
-Em `AgroConnect.Infrastructure.Auth`:
+Em `Agronomia.Infrastructure.Auth`:
 
 * Usa `IConfiguration` para:
 
@@ -239,7 +239,7 @@ Códigos de status:
 
 ## 4️⃣ Configuração de Autenticação JWT na API
 
-No projeto `AgroConnect.Api`:
+No projeto `Agronomia.Api`:
 
 * Registrar autenticação JWT Bearer no `Program.cs`/`Startup`:
 
