--- a/docs/features/F2.1 - SELLER AND OWNER.md
+++ b/docs/features/F2.1 - SELLER AND OWNER.md
@@ -21,14 +21,14 @@ Sem:
 
 ### Domain
 
-Em `AgroConnect.Domain`:
+Em `Agronomia.Domain`:
 
 ```text
-AgroConnect.Domain
+Agronomia.Domain
  └── Organizations
      └── Seller.cs
 
-AgroConnect.Domain
+Agronomia.Domain
  └── Memberships
      ├── SellerMembership.cs
      └── SellerRole.cs
@@ -37,18 +37,18 @@ AgroConnect.Domain
 Namespaces sugeridos:
 
 ```csharp
-namespace AgroConnect.Domain.Organizations;
-namespace AgroConnect.Domain.Memberships;
+namespace Agronomia.Domain.Organizations;
+namespace Agronomia.Domain.Memberships;
 ```
 
 ---
 
 ### Application
 
-Em `AgroConnect.Application`:
+Em `Agronomia.Application`:
 
 ```text
-AgroConnect.Application
+Agronomia.Application
  └── Features
      └── Sellers
          └── RegisterSellerWithOwner
@@ -62,10 +62,10 @@ AgroConnect.Application
 
 ### Api
 
-Em `AgroConnect.Api`:
+Em `Agronomia.Api`:
 
 ```text
-AgroConnect.Api
+Agronomia.Api
  └── Features
      └── Sellers
          └── RegisterSellerWithOwner
@@ -187,7 +187,7 @@ Manager
 Viewer
 ```
 
-> Conforme Linguagem Ubíqua — AgroConnect
+> Conforme Linguagem Ubíqua — Agronomia
 
 ---
 
