--- a/docs/features/backend/F2.1 - SELLER AND OWNER.md
+++ b/docs/features/backend/F2.1 - SELLER AND OWNER.md
@@ -1,6 +1,4 @@
-# 🧩 F2.1 — RegisterSellerWithOwner
-
-## 🎯 Objetivo
+## 🎯 Objetivo do F2.1 — RegisterSellerWithOwner
 
 Criar a **feature de cadastro de Seller com Owner**, responsável por:
 
