--- a/docs/features/backend/F2.2 - REGISTER FARM OWNER.md
+++ b/docs/features/backend/F2.2 - REGISTER FARM OWNER.md
@@ -1,6 +1,4 @@
-# 🧩 F2.2 — RegisterFarmWithOwner
-
-## 🎯 Objetivo
+## 🎯 Objetivo do F2.2 — RegisterFarmWithOwner
 
 Criar a **feature de cadastro de Farm (Produtor Rural) com Owner**, responsável por:
 
