--- a/docs/features/backend/F2.3 - GRANT SELLER MEMBERSHIP.md
+++ b/docs/features/backend/F2.3 - GRANT SELLER MEMBERSHIP.md
@@ -1,6 +1,15 @@
-# 🧩 F2.3 — GrantSellerMembership
+Perfeito. Abaixo está o **documento normativo do F2.3 — GrantSellerMembership**, **no mesmo formato, rigor e nível de detalhe** dos F2.1 e F2.2, respeitando integralmente:
 
-## 🎯 Objetivo
+* Linguagem Ubíqua — AgroConnect
+* DOMAIN_EVENTS.md
+* ARCHITECTURE.md
+* ROADMAP.md
+
+Sem criar conceitos, eventos ou atalhos.
+
+---
+
+## 🎯 Objetivo do F2.3 — GrantSellerMembership
 
 Criar a **feature de concessão de Membership em Seller**, responsável por:
 
