--- a/docs/features/backend/F1.1 - USER REGISTER.md
+++ b/docs/features/backend/F1.1 - USER REGISTER.md
@@ -1,275 +1,99 @@
-# 🧩 F1.1 — RegisterUser
+## 🔐 Pull Request: Implement User Registration (F1.1)
 
-## 🎯 Objective
+### 📌 Context
 
-Implement the **User registration feature**, responsible for creating a **digital identity (`User`)** in the system.
+This PR introduces **F1.1 — RegisterUser**, the first **business feature** of Agronomia.
+It establishes the **Identity & Access foundation** by allowing users to register with email and password, exercising the full stack built in F0.1–F0.3.
+
+This PR validates:
+
+* the Shared Kernel
+* the CQRS pipeline (Wolverine)
+* transactional persistence (EF Core)
+* Domain Event flow
+
+---
+
+### 🎯 Goal
+
+Enable user registration while enforcing core identity invariants and architectural rules:
+
+* Users are registered with name, email, and password
+* Passwords are stored **only as hashes**
+* Email uniqueness is enforced
+* A `UserRegistered` Domain Event is raised
+
+---
+
+### 🧩 What was implemented
+
+#### Domain (Identity & Access)
+
+* `User` aggregate
+
+  * Enforces identity invariants
+  * Emits `UserRegistered` Domain Event
+* `Email` Value Object
+* `UserRegistered` Domain Event
+
+---
+
+#### Application (CQRS)
+
+* `RegisterUserCommand`
+* `RegisterUserHandler`
+* `RegisterUserValidator` (FluentValidation)
+* `RegisterUserResult`
 
 Responsibilities:
 
-* Create a new `User`
-* Validate email uniqueness
-* Securely store the user password (hashed)
-* Raise the domain event `UserRegistered`
-
-Out of scope for this feature:
-
-* Authentication (login)
-* JWT generation
-* Authorization
-* Organization or Membership creation
+* Validate input
+* Check email uniqueness
+* Hash password via abstraction
+* Persist aggregate
+* Let the CQRS pipeline handle transactions and event dispatch
 
 ---
 
-## 📁 Folder / Namespace Structure
+#### Persistence (Write Model)
 
-### Domain
-
-```text
-AgroConnect.Domain
- └── Identity
-     ├── User.cs
-     └── Email.cs
-```
-
-Namespaces:
-
-```csharp
-namespace AgroConnect.Domain.Identity;
-```
+* `IUserRepository` abstraction
+* EF Core–based implementation
+* Unique constraint on email (recommended)
 
 ---
 
-### Application
+#### API
 
-```text
-AgroConnect.Application
- └── Features
-     └── Users
-         └── RegisterUser
-             ├── RegisterUserCommand.cs
-             ├── RegisterUserResult.cs
-             ├── RegisterUserHandler.cs
-             └── RegisterUserValidator.cs
-```
+* `POST /api/users/register`
+* HTTP request/response DTOs
+* Proper status codes:
+
+  * `201 Created` on success
+  * `400 Bad Request` on validation errors
+  * `409 Conflict` when email already exists
 
 ---
 
-### Api
+### 🧠 Architectural decisions
 
-```text
-AgroConnect.Api
- └── Features
-     └── Users
-         └── RegisterUser
-             ├── RegisterUserEndpoint.cs
-             └── RegisterUserHttpRequest.cs
-```
+* User registration is implemented as a **vertical slice**
+* CQRS is strictly enforced:
 
----
+  * Command for writes
+  * No read models involved
+* The Domain layer:
 
-## 1. Aggregate `User`
-
-### 1.1. Objective
-
-Represent the **digital identity** of a person accessing the system.
+  * Knows nothing about hashing, persistence, or infrastructure
+* Password hashing is abstracted and implemented outside the Domain
+* Domain Events are raised by the Aggregate and dispatched by the pipeline
 
 ---
 
-### 1.2. Responsibilities
-
-* Hold identity data
-* Protect invariants related to identity
-* Raise the `UserRegistered` domain event
-
----
-
-### 1.3. Core Properties
-
-* `UserId` (Guid)
-* `Email` (Value Object)
-* `PasswordHash`
-* `CreatedAt`
-
----
-
-### 1.4. Creation Rules
-
-* `Email` is mandatory and must be valid
-* Password must be provided (raw password never stored)
-* Creation happens **only via a factory method**
-* Upon creation, the aggregate **must raise** `UserRegistered`
-
----
-
-### 1.5. Domain Event Raised
-
-```text
-UserRegistered
-```
-
-Payload (minimum):
-
-* UserId
-* Email
-
----
-
-## 2. Value Object `Email`
-
-### 2.1. Objective
-
-Encapsulate and validate a **User email address**.
-
----
-
-### 2.2. Rules
-
-* Must not be null or empty
-* Must follow a valid email format
-* Immutable
-* Compared by value
-
----
-
-## 3. Command `RegisterUser`
-
-### 3.1. Objective
-
-Express the intention to **register a new User**.
-
----
-
-### 3.2. Data Carried
-
-* `Email`
-* `Password`
-
----
-
-### 3.3. Conceptual Signature
-
-```text
-RegisterUserCommand
-```
-
-Returns:
-
-```text
-RegisterUserResult
-```
-
----
-
-## 4. Handler `RegisterUserHandler`
-
-### 4.1. Responsibility
-
-Orchestrate the User registration process while enforcing **business rules and consistency**.
-
----
-
-### 4.2. Logical Flow
-
-1. Validate command input
-2. Check if a User with the same Email already exists
-3. Hash the password using a dedicated abstraction
-4. Create the `User` aggregate
-5. Persist the User via write repository
-6. Commit the Unit of Work
-7. Return the created `UserId`
-
----
-
-### 4.3. Repositories / Services Used (write model)
-
-* `IUserRepository`
-* `IPasswordHasher`
-* `IUnitOfWork`
-
----
-
-## 5. Validator `RegisterUserValidator`
-
-### 5.1. Objective
-
-Validate **input data only**, not business rules.
-
----
-
-### 5.2. Minimum Rules
-
-* `Email` must not be null or empty
-* `Email` must be a valid email format
-* `Password` must not be null or empty
-* Password minimum length enforced (policy defined here)
-
----
-
-## 6. HTTP Endpoint
-
-### 6.1. Route
-
-```text
-POST /api/users/register
-```
-
----
-
-### 6.2. HTTP Request
-
-```text
-RegisterUserHttpRequest
-```
-
-Fields:
-
-* `Email`
-* `Password`
-
----
-
-### 6.3. HTTP Response
-
-Success:
-
-* `201 Created`
-* `UserId`
-
-Errors:
-
-* `400 Bad Request` — validation errors
-* `409 Conflict` — email already registered
-
----
-
-## 7. Domain Event Involved
-
-Event used (already defined):
-
-```text
-UserRegistered
-```
-
-No additional events are introduced.
-
----
-
-## 8. Explicit Rules
-
-1. `User` is **not** an organization
-2. Registration does **not** imply authentication
-3. Password hashing is **not** part of the Domain
-4. Email uniqueness is enforced at the Application layer
-5. Domain remains infrastructure-agnostic
-6. Persistence uses write model only
-
----
-
-## 9. Governance Notes
-
-* F1.1 establishes the **identity foundation** of AgroConnect
-* It is a prerequisite for:
-
-  * F1.2 — AuthenticateUser
-  * All Membership-related features (F2.x)
-* Strict separation between Identity and Authorization is preserved
+### 🚫 Out of scope
+
+* Authentication / JWT issuance (F1.2)
+* Email confirmation
+* Password reset
+* Roles, memberships, or permissions
+* Any Seller/Farm-related logic
